--- a/clinicalTrials-frontend/src/app/header/header.component.css
+++ b/clinicalTrials-frontend/src/app/header/header.component.css
@@ -3,4 +3,11 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    color: white;
+}
+
+.logo {
+    font-size: 24px;
+    font-weight: 500;
+    color: white;
 }
