trying angular css

--- a/clinicalTrials-frontend/src/app/main-page/main-page.component.html
+++ b/clinicalTrials-frontend/src/app/main-page/main-page.component.html
@@ -1,3 +1,4 @@
+
 <section>
     <p>Cupcake ipsum dolor sit amet apple pie pudding liquorice. Chupa chups muffin I love topping I love ice cream
         danish.
@@ -42,8 +43,8 @@
         Gummi
         bears candy canes jelly-o marzipan candy canes. Oat cake topping fruitcake sesame snaps candy brownie gummies.
     </p>
-
-    <button mat-raised-button color="primary" (click)="navigateToTrials()" aria-label="Navigate to Trial"
+    <section class="controls">
+        <button mat-raised-button color="primary" (click)="navigateToTrials()" aria-label="Navigate to Trial"
         title="Navigate to Trial">
         Go To Trials
     </button>
@@ -51,5 +52,9 @@
         title="Navigate to Trial">
         Go To Protocols
     </button>
+
+    </section>
+
+    
 </section>
 maybe add some image here
