minor html and css changes in sponsors and protocol

--- a/clinicalTrials-frontend/src/app/protocol-list/protocol-list.component.html
+++ b/clinicalTrials-frontend/src/app/protocol-list/protocol-list.component.html
@@ -3,7 +3,10 @@
         <mat-list-item class="header">
             <h4>ProtocolCodeNumber</h4>
             <h4>EudraCTNumber</h4>
-
+            <h4>fullTitle</h4>
+            <h4>simplifiedTitle</h4>
+            <h4>main objective</h4>
+            <h4>safetyObjective</h4>
         </mat-list-item>
         <mat-list-item *ngFor="let protocol of this.protocols | async">
             <div class="protocol-text-container">
