Add Imp in trial

--- a/clinicalTrials-frontend/src/app/page-not-found/page-not-found.component.html
+++ b/clinicalTrials-frontend/src/app/page-not-found/page-not-found.component.html
@@ -1,1 +1,4 @@
-404 Page Not Found
+<div class="not-found-container">
+    <h1>Error 404</h1>
+    <p>The page you are looking for is not found.</p>
+</div>
