--- a/clinicalTrials-frontend/src/app/trial-details/trial-details.component.html
+++ b/clinicalTrials-frontend/src/app/trial-details/trial-details.component.html
@@ -78,10 +78,24 @@
                 <mat-divider></mat-divider>
             </div>
         </mat-list>
-        <h3>IMPs </h3>
+        <h3>IMP</h3>
         <mat-divider></mat-divider>
         <mat-list>
-            <mat-list-item>Imp1 </mat-list-item>
+            <mat-list-item>Routes of Adm: {{imp.routesOfAdm}} </mat-list-item>
+            <mat-divider></mat-divider>
+            <mat-list-item>Trade Name: {{imp.tradeName}} </mat-list-item>
+            <mat-divider></mat-divider>
+            <mat-list-item>Product Name: {{imp.productName}}</mat-list-item>
+            <mat-divider></mat-divider>
+            <mat-list-item>Role: {{imp.impRole}}</mat-list-item>
+            <mat-divider></mat-divider>
+            <mat-list-item>More Info: {{imp.moreInfo}}</mat-list-item>
+            <mat-divider></mat-divider>
+            <mat-list-item>Has Marketing Authentication: {{imp.hasMarketingAuth}}</mat-list-item>
+            <mat-divider></mat-divider>
+            <mat-list-item>Country that has Marketing Authentication: {{imp.countryHasMarketingAuth}}</mat-list-item>
+            <mat-divider></mat-divider>
+            <mat-list-item>Pharm Form: {{imp.pharmForm}}</mat-list-item>
             <mat-divider></mat-divider>
         </mat-list>
     </div>
