--- a/clinicalTrials-frontend/src/app/sidebar/sidebar.component.css
+++ b/clinicalTrials-frontend/src/app/sidebar/sidebar.component.css
@@ -3,6 +3,6 @@
     gap: 50px;
     flex-direction: column;
     background-color: #4A7B9D;
-    height: 100%;
+    height: calc(100% - 48px);
     padding: 24px;
 }
