--- a/clinicalTrials-frontend/src/app/imp-list/imp-list.component.html
+++ b/clinicalTrials-frontend/src/app/imp-list/imp-list.component.html
@@ -1,1 +1,31 @@
-<p>imp-list works!</p>
+<mat-list class="imp-list">
+    <mat-list-item class="header">
+        <h4>Trial</h4>
+        <h4>Routes Of Administration</h4>
+        <h4>Trade Name</h4>
+        <h4>Product Name</h4>
+        <h4>Role</h4>
+        <h4>More Info</h4>
+        <h4>Has Marketing Authentication (Country)</h4>
+        <h4>Pharm Form</h4>
+    </mat-list-item>
+    <mat-list-item *ngFor="let imp of imps | async">
+        <div class="imp-text-container">
+            <p mat-line> {{imp.eudraCTNumber}} </p>
+            <p mat-line> {{imp.routesOfAdm}} </p>
+            <p mat-line> {{imp.tradeName}} </p>
+            <p mat-line> {{imp.productName}} </p>
+            <p mat-line> {{imp.impRole}} </p>
+            <p mat-line> {{imp.moreInfo}}</p>
+            <p mat-line>{{imp.hasMarketingAuth}} ({{imp.countryHasMarketingAuth}})</p>
+            <p mat-line>{{imp.pharmForm}}</p>
+            <div class="button-container">
+                <button mat-icon-button color="primary" (click)="showActiveSubstances(imp.impId)"
+                    aria-label="Show Active Substances" title="Show Active Substances">
+                    <mat-icon>more</mat-icon>
+                </button>
+            </div>
+        </div>
+        <mat-divider [inset]="true" *ngIf="!imp"></mat-divider>
+    </mat-list-item>
+</mat-list>
