Add UI Search bar

--- a/clinicalTrials-frontend/src/app/trial-list/trial-list.component.html
+++ b/clinicalTrials-frontend/src/app/trial-list/trial-list.component.html
@@ -5,6 +5,11 @@
         trial</button>
 </section>
 <div>
+    <mat-form-field class="searchbar" appearance="fill">
+        <mat-label>Search Trial</mat-label>
+        <mat-icon matPrefix>search</mat-icon>
+        <input matInput placeholder="EudraCTNumber3">
+    </mat-form-field>
     <mat-list class="trial-list">
         <mat-list-item class="header">
             <h4>EudraCTNumber</h4>
