--- a/clinicalTrials-frontend/src/app/protocol-list/protocol-list.component.html
+++ b/clinicalTrials-frontend/src/app/protocol-list/protocol-list.component.html
@@ -1,3 +1,6 @@
+<section class="protocols-section">
+    <h2>Protocols</h2>
+</section>
 <div>
     <mat-list>
         <mat-list-item class="header">
