--- a/clinicalTrials-frontend/src/app/sponsor-list/sponsor-list.component.html
+++ b/clinicalTrials-frontend/src/app/sponsor-list/sponsor-list.component.html
@@ -1,3 +1,6 @@
+<section class="sponsors-section">
+    <h2>Sponsors</h2>
+</section>
 <div>
     <mat-list class="sponsorList">
         <mat-list-item class="header">
