--- a/clinicalTrials-frontend/src/app/protocol-list/protocol-list.component.html
+++ b/clinicalTrials-frontend/src/app/protocol-list/protocol-list.component.html
@@ -7,24 +7,35 @@
         <mat-icon matPrefix>search</mat-icon>
         <input [(ngModel)]="term" (input)="search(term)" matInput placeholder="ProtocolCodeNumber">
     </mat-form-field>
-    <mat-list>
-        <mat-list-item class="header">
-            <h4>ProtocolCodeNumber</h4>
-            <h4>EudraCTNumber</h4>
-            <h4>fullTitle</h4>
-            <h4>simplifiedTitle</h4>
-            <h4>main objective</h4>
-            <h4>safetyObjective</h4>
-        </mat-list-item>
-        <mat-list-item *ngFor="let protocol of this.protocols | protocolSearchFilter: term">
-            <div class="protocol-text-container">
-                <p mat-line title="{{protocol.protocolCodeNumber}}"> {{protocol.protocolCodeNumber}} </p>
-                <p mat-line title="{{protocol.eudraCTNumber}}"> {{protocol.eudraCTNumber}} </p>
-                <p mat-line title="{{protocol.fullTitle}}"> {{protocol.fullTitle}} </p>
-                <p mat-line title="{{protocol.simplifiedTitle}}"> {{protocol.simplifiedTitle}} </p>
-                <p mat-line title="{{protocol.mainObjective}}"> {{protocol.mainObjective}}</p>
-                <p mat-line title="{{protocol.safetyObjective}}">{{protocol.safetyObjective}}</p>
-            </div>
-        </mat-list-item>
-    </mat-list>
+    <div class="table-container">
+        <table mat-table [dataSource]="this.protocols">
+            <ng-container matColumnDef="protocolCodeNumber">
+                <th mat-header-cell *matHeaderCellDef> protocol Code Number </th>
+                <td mat-cell *matCellDef="let element"> {{element.protocolCodeNumber}} </td>
+            </ng-container>
+            <ng-container matColumnDef="eudraCTNumber">
+                <th mat-header-cell *matHeaderCellDef> eudraCTNumber </th>
+                <td mat-cell *matCellDef="let element"> {{element.eudraCTNumber}} </td>
+            </ng-container>
+            <ng-container matColumnDef="fullTitle">
+                <th mat-header-cell *matHeaderCellDef> Full Title </th>
+                <td mat-cell *matCellDef="let element"> {{element.fullTitle}} </td>
+            </ng-container>
+            <ng-container matColumnDef="simplifiedTitle">
+                <th mat-header-cell *matHeaderCellDef> Simplified Title </th>
+                <td mat-cell *matCellDef="let element"> {{element.simplifiedTitle}} </td>
+            </ng-container>
+            <ng-container matColumnDef="mainObjective">
+                <th mat-header-cell *matHeaderCellDef> Main Objective </th>
+                <td mat-cell *matCellDef="let element"> {{element.mainObjective}} </td>
+            </ng-container>
+            <ng-container matColumnDef="safetyObjective">
+                <th mat-header-cell *matHeaderCellDef> Safety Objective </th>
+                <td mat-cell *matCellDef="let element"> {{element.safetyObjective}}
+                </td>
+            </ng-container>
+            <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+            <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+        </table>
+    </div>
 </div>
