--- a/clinicalTrials-frontend/src/app/trial-list/trial-list.component.html
+++ b/clinicalTrials-frontend/src/app/trial-list/trial-list.component.html
@@ -10,38 +10,50 @@
         <mat-icon matPrefix>search</mat-icon>
         <input [(ngModel)]="term" (input)="search(term)" matInput placeholder="EudraCTNumber3">
     </mat-form-field>
-    <mat-list class="trial-list">
-        <mat-list-item class="header">
-            <h4>EudraCTNumber</h4>
-            <h4>Trial Status</h4>
-            <h4>Trial Type Phase</h4>
-            <h4>Estimated Duration</h4>
-            <h4>therapeutic Area</h4>
-            <h4>Tools</h4>
-        </mat-list-item>
-        <mat-list-item *ngFor="let trial of trials | trialSearchFilter: term;">
-            <div class="trial-text-container">
-                <p mat-line title="{{trial.eudraCTNumber}}">{{trial.eudraCTNumber}}</p>
-                <p mat-line title="{{trial.trialStatus}}"> {{trial.trialStatus}} </p>
-                <p mat-line title="{{trial.trialTypePhase}}"> {{trial.trialTypePhase}} </p>
-                <p mat-line title="{{trial.estimatedDuration}}"> {{trial.estimatedDuration}}</p>
-                <p mat-line title="{{trial.therapeuticArea}}">{{trial.therapeuticArea}}</p>
-                <div class="button-container">
-                    <button mat-icon-button color="primary" (click)="moreTrial(trial.eudraCTNumber)"
-                        aria-label="More info Trial" title="more info for Trial">
-                        <mat-icon>more</mat-icon>
-                    </button>
-                    <button [disabled]="!this.userService.hasUser" mat-icon-button color="primary"
-                        (click)="deleteTrial(trial.eudraCTNumber)" aria-label="Delete Trial" title="Delete Trial">
-                        <mat-icon>delete</mat-icon>
-                    </button>
-                    <button mat-icon-button [disabled]="!this.userService.hasUser" color="primary"
-                        (click)="editTrial(trial.eudraCTNumber)" aria-label="Edit Trial" title="Edit Trial">
-                        <mat-icon>edit</mat-icon>
-                    </button>
-                </div>
-            </div>
-            <mat-divider [inset]="true" *ngIf="!trial"></mat-divider>
-        </mat-list-item>
-    </mat-list>
+    <div class="table-container">
+        <table mat-table [dataSource]="trials">
+            <ng-container matColumnDef="eudractNumber">
+                <th mat-header-cell *matHeaderCellDef> EudraCTNumber </th>
+                <td mat-cell *matCellDef="let element"> {{element.eudraCTNumber}} </td>
+            </ng-container>
+            <ng-container matColumnDef="trialStatus">
+                <th mat-header-cell *matHeaderCellDef> Trial Status </th>
+                <td mat-cell *matCellDef="let element"> {{element.trialStatus}} </td>
+            </ng-container>
+            <ng-container matColumnDef="trialTypePhase">
+                <th mat-header-cell *matHeaderCellDef> Trial Type Phase </th>
+                <td mat-cell *matCellDef="let element"> {{element.trialTypePhase}} </td>
+            </ng-container>
+            <ng-container matColumnDef="estimatedDuration">
+                <th mat-header-cell *matHeaderCellDef> Estimated Duration </th>
+                <td mat-cell *matCellDef="let element"> {{element.estimatedDuration}} </td>
+            </ng-container>
+            <ng-container matColumnDef="therapeuticArea">
+                <th mat-header-cell *matHeaderCellDef> Therapeutic Area </th>
+                <td mat-cell *matCellDef="let element"> {{element.therapeuticArea}} </td>
+            </ng-container>
+            <ng-container matColumnDef="tools">
+                <th mat-header-cell *matHeaderCellDef> Tools </th>
+                <td mat-cell *matCellDef="let element">
+                    <div class="button-container">
+                        <button mat-icon-button color="primary" (click)="moreTrial(element.eudraCTNumber)"
+                            aria-label="More info Trial" title="more info for Trial">
+                            <mat-icon>more_vert</mat-icon>
+                        </button>
+                        <button [disabled]="!this.userService.hasUser" mat-icon-button color="primary"
+                            (click)="deleteTrial(element.eudraCTNumber)" aria-label="Delete Trial" title="Delete Trial">
+                            <mat-icon>delete</mat-icon>
+                        </button>
+                        <button mat-icon-button [disabled]="!this.userService.hasUser" color="primary"
+                            (click)="editTrial(element.eudraCTNumber)" aria-label="Edit Trial" title="Edit Trial">
+                            <mat-icon>edit</mat-icon>
+                        </button>
+                    </div>
+                </td>
+            </ng-container>
+            <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+            <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+        </table>
+    </div>
+
 </div>
