--- a/clinicalTrials-frontend/src/app/main-page/main-page.component.css
+++ b/clinicalTrials-frontend/src/app/main-page/main-page.component.css
@@ -2,3 +2,22 @@
     display: flex;
     gap: 5px;
 }
+p{
+    padding-top: 50px;
+    padding-left: 50px;
+    font-size: 30px;
+    color: rgb(255, 255, 255);
+}
+
+.fill{
+    padding: 300px;
+    color: rgba(201, 201, 201, 0);
+}
+
+section{
+
+    width: 100%;
+    height:100%; 
+    background-size:cover; 
+    background-image: url("../../assets/images/297979521_902253684068374_878617910239341648_n.png");
+}
