--- a/clinicalTrials-frontend/src/app/main-page/main-page.component.html
+++ b/clinicalTrials-frontend/src/app/main-page/main-page.component.html
@@ -1,55 +1,15 @@
 <section>
-    <p>Cupcake ipsum dolor sit amet apple pie pudding liquorice. Chupa chups muffin I love topping I love ice cream
-        danish.
-        Jelly beans lemon drops pudding cotton candy marshmallow ice cream cheesecake. Candy canes powder wafer
-        croissant
-        jujubes brownie. Donut oat cake donut sweet roll dessert. I love gummies sesame snaps marshmallow ice cream
-        bonbon
-        shortbread caramels jelly-o. Marzipan wafer I love I love halvah pie. Gummi bears liquorice dessert
-        chocolate
-        cake
-        carrot cake tiramisu chupa chups bonbon carrot cake. Danish sweet roll toffee dessert tootsie roll croissant
-        candy.
-        Gummies jelly beans ice cream I love halvah lollipop macaroon pudding marzipan. I love powder shortbread
-        muffin
-        brownie
-        shortbread tootsie roll brownie. Chupa chups chocolate cake tiramisu chocolate bar cake tootsie roll. Candy
-        jelly-o
-        biscuit tiramisu pastry gingerbread ice cream. Macaroon halvah I love chocolate bar topping sweet roll.
-        Donut cake oat cake tiramisu I love cake icing. Sugar plum I love topping I love liquorice oat cake sweet
-        danish. Gummi
-        bears jujubes icing dessert cheesecake. Jelly-o chocolate liquorice brownie sesame snaps. Cheesecake I love
-        fruitcake
-        powder marshmallow dessert jelly-o pudding. Cheesecake jelly beans powder pastry fruitcake tart muffin apple
-        pie
-        chocolate cake. Powder gummies muffin chocolate cake biscuit pastry brownie croissant sweet roll. Cheesecake
-        lemon drops
-        donut candy canes gummies cotton candy brownie. Marshmallow dessert sesame snaps soufflé croissant I love
-        powder. I love
-        chocolate wafer caramels powder chocolate cake dessert pastry marshmallow. I love sweet roll oat cake I love
-        pie
-        biscuit
-        chocolate. Topping caramels jujubes halvah chocolate sweet sweet. Tiramisu powder powder powder tootsie
-        roll. I
-        love
-        candy canes donut oat cake chupa chups dragée dragée.
-        Cake bonbon cupcake dragée fruitcake. Tootsie roll cake bonbon marshmallow pie jelly-o. Marzipan gingerbread
-        brownie
-        candy canes marzipan marshmallow dessert jujubes. Ice cream pastry gummi bears shortbread apple pie powder.
-        Carrot cake
-        icing icing cake sesame snaps fruitcake gingerbread liquorice. Cotton candy carrot cake cupcake fruitcake
-        cake
-        cotton
-        candy dessert. Cupcake gingerbread carrot cake I love I love. Apple pie dessert croissant carrot cake
-        fruitcake
-        bear
-        claw powder I love. Croissant marshmallow apple pie bonbon I love chupa chups sugar plum. Biscuit I love
-        pastry
-        tootsie
-        roll tiramisu gummi bears biscuit carrot cake. Cheesecake fruitcake liquorice chocolate bar sugar plum
-        bonbon.
-        Gummi
-        bears candy canes jelly-o marzipan candy canes. Oat cake topping fruitcake sesame snaps candy brownie
-        gummies.
+
+    <p>A website listing clinical trials within several EU countries on drug treatments for HIV
+        
     </p>
+
+    <p class="fill"> _______________________________________________________________________________________</p>
+
+
+
+
+
+
+
 
